Add menu CRUD.
