# model/menu_form.go
@@ -1,0 +1,5 @@
+package model
+
+type MenuForm struct {
+	Name string `json:"name"`
+}
